{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 41,
  "lineage": "3c6d0e7e-1f87-15dc-0004-991b70597b79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04dcb3dba9a01fa63",
            "arn": "arn:aws:ec2:us-east-1:019273956931:instance/i-00dcc54938343cb79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dcc54938343cb79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f245bec9e1a6a2d6",
            "private_dns": "ip-172-31-42-251.ec2.internal",
            "private_ip": "172.31.42.251",
            "public_dns": "ec2-54-81-153-84.compute-1.amazonaws.com",
            "public_ip": "54.81.153.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e79129d254a56778",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ayamb-dev-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7d22aad823bc724",
            "tags": {
              "Name": "ayamb-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "ayamb-dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02355b681f7c91af6"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.data_bucket",
            "aws_security_group.sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:security-group/sg-02355b681f7c91af6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02355b681f7c91af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ayamb-dev-sg",
            "name_prefix": "",
            "owner_id": "019273956931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-069169c230d25b7b0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:internet-gateway/igw-06d893569451b838e",
            "id": "igw-06d893569451b838e",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d893569451b838e",
            "id": "r-rtb-01a578239fb730cf91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a578239fb730cf9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_internet_gateway.this",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:route-table/rtb-0ffce19401e8f24bb",
            "id": "rtb-0ffce19401e8f24bb",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:route-table/rtb-000af9285df91e047",
            "id": "rtb-000af9285df91e047",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:route-table/rtb-09218cf3475090c2e",
            "id": "rtb-09218cf3475090c2e",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:route-table/rtb-01a578239fb730cf9",
            "id": "rtb-01a578239fb730cf9",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d893569451b838e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d156566173dd4b6",
            "route_table_id": "rtb-0ffce19401e8f24bb",
            "subnet_id": "subnet-09cb72a056fef6ee4"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed64f9d3a49f317",
            "route_table_id": "rtb-000af9285df91e047",
            "subnet_id": "subnet-08580cab6bd2ac8b8"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7b4dd4b761dec3e",
            "route_table_id": "rtb-09218cf3475090c2e",
            "subnet_id": "subnet-01dfee1ea7c6d4b75"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d11246fa5612b9a",
            "route_table_id": "rtb-01a578239fb730cf9",
            "subnet_id": "subnet-06fa9dfe30fa1cbb7"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac7665f53f072100",
            "route_table_id": "rtb-01a578239fb730cf9",
            "subnet_id": "subnet-03261e8f17331e4fc"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bf3be88d292e0b8",
            "route_table_id": "rtb-01a578239fb730cf9",
            "subnet_id": "subnet-076812f835fe2830b"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-09cb72a056fef6ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cb72a056fef6ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-08580cab6bd2ac8b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08580cab6bd2ac8b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-01dfee1ea7c6d4b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dfee1ea7c6d4b75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-06fa9dfe30fa1cbb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa9dfe30fa1cbb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-03261e8f17331e4fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03261e8f17331e4fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:subnet/subnet-076812f835fe2830b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076812f835fe2830b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0afcc445635feb990"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019273956931:vpc/vpc-0afcc445635feb990",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0442ba6558639e4a4",
            "default_route_table_id": "rtb-0668781639891376f",
            "default_security_group_id": "sg-0a635a95096af5762",
            "dhcp_options_id": "dopt-0b12dff9fa43a1296",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0afcc445635feb990",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0668781639891376f",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "ayamb-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}